--- a/README
+++ b/README
@@ -2,11 +2,18 @@
 OpenXCAP
 --------
 
-Copyright (c) 2007-2008 AG Projects 
+Copyright (c) 2007-2009 AG Projects 
 http://ag-projects.com
 
-Authors: Mircea Amarascu, Ruud Klaver,  Lucian Stanescu, Denis Bilenko
 Home page: http://openxcap.org
+
+Authors
+-------
+
+Mircea Amarascu
+Ruud Klaver
+Lucian Stanescu
+Denis Bilenko
 
 
 Description
