Increased version and updated changelog
Ignore-this: c0b016db5d9a2c68cbd857c351d1f687

darcs-hash:20090903080459-1e3d8-1a74128483d4534cc2f1f2b48f7c693b3408b2fb.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+openxcap (1.1.2) unstable; urgency=low
+
+  * Fixed debian/rules and added dependencies an newer cdbs and debhelper
+  * Bumped Standerds-Version to 3.8.3
+
+ -- Lucian Stanescu <luci@ag-projects.com>  Thu, 03 Sep 2009 11:04:01 +0300
+
 openxcap (1.1.1) unstable; urgency=low
 
   * Merged the ThorNode section of the configuration file into ThorNetwork
