--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+openxcap (1.1.3) unstable; urgency=low
+
+  * Fixed digest authentication bug related to the opaque attribute
+  * Added more python packages to the runtime dependency checking
+
+ -- Adrian Georgescu <ag@ag-projects.com>  Thu, 12 Nov 2009 15:01:35 +0100
+
 openxcap (1.1.2) unstable; urgency=low
 
   * Fixed debian/rules and added dependencies an newer cdbs and debhelper
