--- a/README
+++ b/README
@@ -14,6 +14,7 @@ Mircea Amarascu
 Ruud Klaver
 Lucian Stanescu
 Denis Bilenko
+Saul Ibarra
 
 
 Description
@@ -76,6 +77,13 @@ Supported XCAP applications
  * PIDF manipulation (auid = pidf-manipulation). Pidf-manipulation
    application usage defines how XCAP is used to manipulate the contents of
    PIDF based presence documents.
+ * XCAP directory (auid = xcap-directory, org.openmobilealliance.xcap-directory). 
+   Lists the documents stored in the XCAP server for a given user.
+ * icon (auid = icon, oma_status-icon). Manipulate the user icon for
+   a given user and provide icon download capability from HTTP clients.
+ * Dialog rules (auid = dialog-rules). Dialog Rules application is a
+   custom application modeled after Presence rules that uses authorization 
+   policies, to specify when dialog information can be given to which watchers.
  * Watchers (auid = watchers, proprietary application). This application
    returns the list of watchers from OpenSIPS presence agent.
 
